--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,310 @@
 @tailwind utilities;
 
 :root {
+  
   --background: #ffffff;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    
+    --background: #333333;
     --foreground: #ededed;
   }
+
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+ background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(255, 255, 255, 0.7));
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 3rem;
+  background-color: black;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+header:hover {
+  box-shadow:0 0 10px #ededed;
+}
+
+header h1 {
+  display: flex;
+  align-items: center;
+  margin-left: 0.8rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  font-weight: 700;
+}
+
+header h1:hover {
+  transform: scale(1.05);
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  margin-left: 1rem;
+}
+
+ul li {
+  font-weight: 500;
+  margin-right: 1rem;
+  transition: transform 0.5s ease-in-out;
+  cursor: pointer;
+} 
+
+ul li:hover {
+  transform: scale(1.08);
+}
+
+.Parent {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  width: 50%;
+}
+
+.text h1 {
+  color: #ededed;
+  font-size: 1.5rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.text h1 span {
+  color: black;
+  margin-left: 1rem;
+  font-size: 2.2rem;
+}
+
+.text p {
+  color: #ededed;
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.text p span {
+  color: black;
+  text-decoration: underline;
+  font-weight: 700;
+  transition: box-shadow 0.3s ease-in-out;
+  padding: 2px;
+  border-radius: 2px;
+}
+
+.text p span:hover {
+  box-shadow:0 0 10px #ededed;
+}
+
+.img-box {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.img-box img {
+  border-radius: 2rem;
+  transition: box-shadow 0.5s ease-in-out;
+  opacity: 90%;
+  border: 1px solid white;
+}
+
+.img-box img:hover { 
+  box-shadow:0 0 10px black;
+}
+
+
+
+@media screen and (max-width: 600px) {
+  header h1{
+    margin-left: 0.5rem;
+    font-size: 0.85rem;
+  }
+  ul li{
+    margin-right: 0.8rem ;
+    font-size: 0.75rem;
+  }
+  .Parent {
+    width: 100%;
+    height: 80vh;
+    flex: flex;
+    flex-direction: column;  
+  }
+  .text {
+    margin: 2rem 0;
+      width: 65%;
+    }
+  .text h1 {
+    color: #ededed;
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer;
+  }
+  .text h1 span {
+    color: black;
+    margin: 10px 0 10px 16px;
+    font-size: 1.8rem;
+  }
+  .text p {
+    color: #ededed;
+    font-size: 1.2rem;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  .img-box {
+    width: 55%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .img-box img {
+    border-radius: 2rem;
+    transition: box-shadow 0.5s ease-in-out;
+    opacity: 90%;
+    border: 1px solid white;
+    width:420px ;
+    height: 380px;
+  }
+  
+}
+
+
+.center {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.About{
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem 0  2rem 0;
+
+}
+
+.head h1 {
+    font-size: 3rem;
+  font-weight: 700;
+  color: #333333;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.head h1:hover {
+  transform: scale(1.05);
+}
+
+.head h1 span {
+  padding-left:1rem ;
+}
+
+.para {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.para p {
+  font-size: 1.2rem;
+  cursor: pointer;
+  font-weight: 500;
+  color: black;
+}
+
+.para p span {
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-decoration:underline;
+  text-decoration-color:#dbbebe ;
+}
+
+@media about and (max-width:600) {
+  .head h1 {
+    font-size:1.5rem ;
+  font-weight: 500;
+  color: #333333;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+}
+
+.box {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Contact {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+   justify-content: center;
+}
+
+.Contact h1 {
+  font-size: 2rem;
+  margin: 1rem 0;
+  font-weight: 700;
+  color: #333333;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+}
+
+.Contact h1:hover {
+  transform: scale(1.05);
+}
+
+.Contact p {
+  font-size: 1.2rem;
+  margin: 1rem 0;
+  font-weight: 500;
+  color: black;
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  margin-right: 0.5rem;
+}
+
+.meetup {
+  margin-left: 0.5rem;
+  display: flex;
+  align-items: center;
 }
