--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,13 +107,13 @@ ul li:hover {
   color: black;
   text-decoration: underline;
   font-weight: 700;
-  transition: box-shadow 0.3s ease-in-out;
+  transition: text-shadow 0.3s ease-in-out;
   padding: 2px;
   border-radius: 2px;
 }
 
 .text p span:hover {
-  box-shadow:0 0 10px #ededed;
+  text-shadow:0 0 10px #ededed;
 }
 
 .img-box {
@@ -174,7 +174,7 @@ ul li:hover {
     cursor: pointer;
   }
   .img-box {
-    width: 55%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -185,8 +185,8 @@ ul li:hover {
     transition: box-shadow 0.5s ease-in-out;
     opacity: 90%;
     border: 1px solid white;
-    width:420px ;
-    height: 380px;
+    width:400px ;
+    height: 350px;
   }
   
 }
@@ -221,9 +221,11 @@ ul li:hover {
   color: #333333;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
+  transition: text-shadow 0.3s ease-in-out;
 }
 
 .head h1:hover {
+  text-shadow:0 0 10px #ededed;
   transform: scale(1.05);
 }
 
@@ -286,9 +288,11 @@ ul li:hover {
   transition: transform 0.3s ease-in-out;
   display: flex;
   align-items: center;
+  transition: text-shadow 0.3s ease-in-out;
 }
 
 .Contact h1:hover {
+  text-shadow:0 0 10px #ededed;
   transform: scale(1.05);
 }
 
@@ -299,7 +303,13 @@ ul li:hover {
   color: black;
   display: flex;
   align-items: center;
+  transition: text-shadow 0.3s ease-in-out;
 }
+
+.Contact p:hover {
+  text-shadow:0 0 10px #ededed;
+}
+
 
 .icon {
   margin-right: 0.5rem;
